added maps in house-detail component and added map related packages

--- a/frontend/src/app/houses/house-detail/house-detail.component.html
+++ b/frontend/src/app/houses/house-detail/house-detail.component.html
@@ -94,5 +94,7 @@
       <h5>Total Price = ₹ {{ totalPrice }}</h5>
     </div>
   </div>
-  <div class="map-container">this is map</div>
+  <h4 class="map-heading mt-8 mb-2">Explore Nearby Areas</h4>
+  <div class="map-container mb-4">
+    <app-maps [coordinates]="houseCoordinates"></app-maps></div>
 </section>
