--- a/frontend/src/app/houses/house-detail/house-detail.component.scss
+++ b/frontend/src/app/houses/house-detail/house-detail.component.scss
@@ -72,6 +72,7 @@
     justify-content: space-around !important;
     &-price-card{
         position:sticky;
+        border: 1px solid #aaaaaa9a;
         top: 0;
         justify-content: space-evenly;
         height: 30rem;
@@ -86,7 +87,7 @@
     margin-bottom: 2rem;
     h4{
         margin-top: 4rem;
-        margin-bottom: 2rem;
+        margin-bottom: 4rem;
     }
    ul {
        column-count: 3;
@@ -130,6 +131,15 @@
     }
 }
 
+.map-heading{
+        text-align: center;
+}
+
 .map-container{
-    height: 10rem;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    border-radius: 1rem;
+    overflow: hidden;
+    overflow: hidden;
+    height: 45rem;
+    width: 100%;
 }
