--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap');
-
+@import '~maplibre-gl/dist/maplibre-gl.css';
 // MEDIA QUERY MANAGER
 /*
 0 - 600px:      Phone
