--- a/frontend/src/app/shared/header/header.component.html
+++ b/frontend/src/app/shared/header/header.component.html
@@ -3,7 +3,7 @@
     <span class="brand-name">Haus</span>
   </a>
 
-  <app-search-bar *ngIf="showSearchBarHeader"></app-search-bar>
+  <!-- <app-search-bar *ngIf="showSearchBarHeader"></app-search-bar> -->
   <div>
     <button class="button-s mr-1">Become a Host</button>
     <button
