added booking functionality with static user id and added date-fns package

--- a/frontend/src/app/houses/house-detail/house-detail.component.html
+++ b/frontend/src/app/houses/house-detail/house-detail.component.html
@@ -90,7 +90,7 @@
         (ngModelChange)="onDateChange($event)"
       >
       </nz-range-picker>
-      <button class="button-p w-full">Book Room</button>
+      <button class="button-p w-full" (click)="bookHouse()">Book Room</button>
       <h5>Total Price = ₹ {{ totalPrice }}</h5>
     </div>
   </div>
