--- a/frontend/src/app/shared/ui-components/search-bar/search-bar.component.html
+++ b/frontend/src/app/shared/ui-components/search-bar/search-bar.component.html
@@ -47,11 +47,11 @@
       </li>
     </ul>
   </nz-dropdown-menu>
-  <button 
+  <button
   *ngIf="!showSearchBarHeader" class="button-p search-button" type="submit">
     <span class="search-button-text">Search</span>
   </button>
-  <button class="search-button_icon" *ngIf="showSearchBarHeader" type="submit">
+  <!-- <button class="search-button_icon" *ngIf="showSearchBarHeader" type="submit">
     <svg
       xmlns="http://www.w3.org/2000/svg"
       class="icon icon-tabler icon-tabler-search"
@@ -68,5 +68,5 @@
       <circle cx="10" cy="10" r="7" />
       <line x1="21" y1="21" x2="15" y2="15" />
     </svg>
-  </button>
+  </button> -->
 </form>
