authentication working in front end

--- a/frontend/src/app/shared/header/header.component.html
+++ b/frontend/src/app/shared/header/header.component.html
@@ -1,10 +1,11 @@
 <header class="flex">
-  <a href="#">
+  <a routerLink="/">
     <span class="brand-name">Haus</span>
   </a>
 
   <!-- <app-search-bar *ngIf="showSearchBarHeader"></app-search-bar> -->
   <div>
+    <!-- <button (click)="navigate()" >profile </button> -->
     <button class="button-s mr-1">Become a Host</button>
     <button
       class="button-p"
