added responsiveness in account page and added default email and passwrd in login page

--- a/frontend/src/app/auth/auth.component.html
+++ b/frontend/src/app/auth/auth.component.html
@@ -18,6 +18,7 @@
           name="email"
           placeholder="Your email "
           [required]="!isSignup"
+          [(ngModel)]="defaultEmail"
           ngModel
         />
       </p>
@@ -94,6 +95,7 @@
             name="password"
             [required]="true"
             ngModel
+            [(ngModel)]="defaultPassword"
           />
         </nz-input-group>
       </p>
