--- a/frontend/src/app/shared/footer/footer.component.html
+++ b/frontend/src/app/shared/footer/footer.component.html
@@ -64,5 +64,5 @@
       </div>
     </div>
   </div>
-  <div class="my-2">© 1968 Company Co. All rights reserved.</div>
+  <div class="my-2">© 2022  Created by Aranyak. All rights reserved.</div>
 </footer>
